objects/InsuranceAdministrator__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCompany__c</fullName>
        <label>InsuranceCompany</label>
        <referenceTo>InsuranceCompany__c</referenceTo>
        <relationshipLabel>InsuranceAdministrators</relationshipLabel>
        <relationshipName>InsuranceAdministrators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserNAME__c</fullName>
        <label>UserName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>InsuranceAdministrator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>InsureAdmin-{00000000}</displayFormat>
        <label>InsuranceAdministrator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InsuranceAdministrators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>